task5/tests/group/output/test11.out
lli: <stdin>:28:17: error: use of undefined value '%-21944'
%t1 = trunc i32 %-21944 to i8
                ^

